# gpu-clusterize

./: .gitignore  README.md  brute_force.py  distance_matrix.txt  main.py  research.py  research_another.py  tmp.py
cpp/: CMakeLists.txt  KMedoids.cpp  KMedoids.h  KNN.cpp  KNN.h  Points.cpp  Points.h  dist.cu  main.cpp
cpp/utils/: CostCalculator.cpp  CostCalculator.h  Data.h  LambdaCalculator.cpp  LambdaCalculator.h  SubgradientCalculator.cpp  SubgradientCalculator.h  constants.h  helper.h
faiss/: baseline.py  hnsw_faiss.ipynb  pq_simple.ipynb  research.ipynb
faiss/faiss_knn/: FAISS_KNN_Notebook.ipynb  faiss_knn.py
python/: brute_force.py  main.py  research.py  research_another.py
tmp/: knn.ipynb
